src/test/ui/feature-gates/feature-gate-asm2.stderr
error[E0658]: use of unstable library feature 'llvm_asm': prefer using the new asm! syntax instead
  --> $DIR/feature-gate-asm2.rs:7:26
   |
LL |         println!("{:?}", llvm_asm!(""));
   |                          ^^^^^^^^
   |
   = note: see issue #70173 <https://github.com/rust-lang/rust/issues/70173> for more information
   = help: add `#![feature(llvm_asm)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
